# memX

./: .gitignore  Dockerfile  README.md  Readme.md  auth.py  docker-compose.yml  main.py  pubsub.py  pyproject.toml  requirements.txt  schema.py  store.py  validate_api.py  validate_api_key.py
config/: acl.json
demo/: executor.py  planner.py
examples/: explorer_agent.py  monitor_agent.py  query_agent.py  synthesizer_agent.py  test.py
frontend/: streamlit.py
frontend/memx-frontend/app/: page.js
frontend/memx-frontend/app/components/: AuthForm.js  CreateKeyForm.js  Header.js  KeyViewer.js  LogoutButton.js
sdk/: pyproject.toml
sdk/context_sdk/: __init__.py  client.py  test_client.py
